change wording of README

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,9 +1,9 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
+This README file documents all of the steps that are necessary to get the
 application up and running.
 
-Things you may want to cover:
+Things to cover:
 
 * Ruby version
 
@@ -15,7 +15,7 @@ Things you may want to cover:
 
 * Database initialization
 
-* How to run the test suite
+* How to run the test Suite
 
 * Services (job queues, cache servers, search engines, etc.)
 
