--- a/README.rdoc
+++ b/README.rdoc
@@ -1,9 +1,10 @@
 == README
+###Alecs Konson - remove this line later###
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
-Things you may want to cover:
+Things you may REALLY want to cover:
 
 * Ruby version
 
